// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bud.build.config has expected default css rule 1`] = `
Object {
  "include": Array [
    StringContaining "src",
  ],
  "test": Object {},
  "use": Array [
    Object {
      "loader": StringContaining "mini-css-extract-plugin/dist/loader.js",
    },
    Object {
      "loader": StringContaining "css-loader/dist/cjs.js",
      "options": Object {
        "importLoaders": 1,
        "sourceMap": false,
      },
    },
    Object {
      "loader": StringContaining "postcss-loader/dist/cjs.js",
      "options": Object {
        "postcssOptions": Any<Object>,
        "sourceMap": true,
      },
    },
  ],
}
`;

exports[`bud.build.config has expected default cssModule rule 1`] = `
Object {
  "include": Array [
    StringContaining "src",
  ],
  "test": Object {},
  "use": Array [
    Object {
      "loader": StringContaining "mini-css-extract-plugin/dist/loader.js",
    },
    Object {
      "loader": StringContaining "css-loader/dist/cjs.js",
      "options": Object {
        "importLoaders": 1,
        "localIdentName": "[name]__[local]___[hash:base64:5]",
        "modules": true,
        "sourceMap": false,
      },
    },
  ],
}
`;

exports[`bud.build.config has expected default csv rule 1`] = `
Object {
  "exclude": Array [
    StringContaining "node_modules",
  ],
  "include": Array [
    StringContaining "project",
  ],
  "test": Object {},
  "use": Array [
    Object {
      "loader": StringContaining "csv-loader/index.js",
    },
  ],
}
`;

exports[`bud.build.config has expected default font rule 1`] = `
Object {
  "generator": Object {
    "filename": "fonts/[name][ext]",
  },
  "include": Array [
    StringContaining "src",
  ],
  "test": /\\\\\\.\\(ttf\\|otf\\|eot\\|woff2\\?\\|ico\\)\\$/,
  "type": "asset",
}
`;

exports[`bud.build.config has expected default html rule 1`] = `
Object {
  "exclude": Array [
    StringContaining "node_modules",
  ],
  "include": Array [
    StringContaining "project",
  ],
  "test": Object {},
  "use": Array [
    Object {
      "loader": StringContaining "html-loader/dist/cjs.js",
    },
  ],
}
`;

exports[`bud.build.config has expected default image rule 1`] = `
Object {
  "generator": Object {
    "filename": "images/[name][ext]",
  },
  "include": Array [
    StringContaining "project/src",
  ],
  "test": Object {},
  "type": "asset/resource",
}
`;

exports[`bud.build.config has expected default js rule 1`] = `
Object {
  "include": Array [
    StringContaining "src",
  ],
  "test": Object {},
  "use": Array [
    Object {
      "loader": Any<String>,
      "options": Any<Object>,
    },
  ],
}
`;

exports[`bud.build.config has expected default json rule 1`] = `
Object {
  "exclude": Array [
    StringContaining "node_modules",
  ],
  "include": Array [
    StringContaining "project",
  ],
  "parser": Object {
    "parse": [Function],
  },
  "test": Object {},
  "type": "json",
}
`;

exports[`bud.build.config has expected default requireEnsure rule 1`] = `
Object {
  "exclude": Array [
    Object {},
  ],
  "parser": Object {
    "requireEnsure": false,
  },
  "test": Object {},
}
`;

exports[`bud.build.config has expected default svg rule 1`] = `
Object {
  "generator": Object {
    "filename": "svg/[name][ext]",
  },
  "include": Array [
    StringContaining "project/src",
  ],
  "test": Object {},
  "type": "asset/resource",
}
`;

exports[`bud.build.config has expected default toml rule 1`] = `
Object {
  "exclude": Array [
    StringContaining "node_modules",
  ],
  "include": Array [
    StringContaining "project",
  ],
  "parser": Object {
    "parse": [Function],
  },
  "test": Object {},
  "type": "json",
}
`;

exports[`bud.build.config has expected default webp rule 1`] = `
Object {
  "generator": Object {
    "filename": "images/[name][ext]",
  },
  "include": Array [
    StringContaining "project/src",
  ],
  "test": Object {},
  "type": "asset/resource",
}
`;

exports[`bud.build.config has expected default xml rule 1`] = `
Object {
  "exclude": Array [
    StringContaining "node_modules",
  ],
  "include": Array [
    StringContaining "project",
  ],
  "test": Object {},
  "use": Array [
    Object {
      "loader": StringContaining "/xml-loader/index.js",
    },
  ],
}
`;

exports[`bud.build.config has expected default yaml rule 1`] = `
Object {
  "exclude": Array [
    StringContaining "node_modules",
  ],
  "include": Array [
    StringContaining "/project",
  ],
  "test": Object {},
  "use": Array [
    Object {
      "loader": StringContaining "js-yaml-loader",
    },
  ],
}
`;

exports[`bud.build.config has expected resolve.extensions default 1`] = `
Array [
  ".mjs",
  ".cjs",
  ".js",
  ".jsx",
  ".css",
  ".json",
  ".wasm",
  ".yml",
  ".toml",
]
`;
